--- a/src/main/webapp/WEB-INF/employeeHomePage.html
+++ b/src/main/webapp/WEB-INF/employeeHomePage.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/common.css'"/>
     <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/haf.css'"/>
     <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/tables.css'"/>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div th:insert="/WEB-INF/templates/header (${session.user})"></div>
-    <div class="main-body">
-        <span class="main-title">Employee Home Page</span>
+    <div th:replace="/WEB-INF/templates/header (${session.user})"></div>
+    <main>
+        <h1>Employee Home Page</h1>
         <div th:replace="~{/WEB-INF/templates/estimateTable (${notPricedEstimates}, ${products}, ${'Not Priced estimates'})}" ></div>
         <div th:replace="~{/WEB-INF/templates/estimateTable (${pricedEstimates}, ${products}, ${'Priced estimates'})}" ></div>
-    </div>
-    <div th:insert="/WEB-INF/templates/footer"></div>
+    </main>
+    <div th:replace="/WEB-INF/templates/footer"></div>
 </body>
 </html>
