--- a/src/main/webapp/registerPage.html
+++ b/src/main/webapp/registerPage.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" type="text/css" media="all" href="styles/common.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="styles/haf.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="styles/forms.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="em-header bar" th:fragment="fragment (user)">
+    <header th:fragment="fragment (user)">
         <span>Welcome</span>
-    </div>
-    <div class="main-body">
-        <span class="main-title">Sign Up Page</span>
-        <div>
+    </header>
+    <main>
+        <h1 class="main-title">Sign Up Page</h1>
+        <section>
             <form action="CheckSignUp" method="POST">
                 <label>
                     <span>Username</span>
@@ -40,15 +43,14 @@
                 </label>
                 <input class="my-button submit-button" type="submit" value="Register">
             </form>
-        </div>
-        <div>
+        </section>
+        <section>
             <span>Already signed up?</span>
             <a class="my-button" href="index.html">Login</a>
-        </div>
-        
-    </div>
-    <div class="em-footer bar" th:fragment="fragment">
-        <span>Carlo Chiodaroli am Polytechnikum Mailand</span>
-    </div>
+        </section>
+    </main>
+    <footer class="em-footer bar" th:fragment="fragment">
+        <span>Carlo Chiodaroli - Estimate Management - 2022</span>
+    </footer>
 </body>
 </html>
