Estimate details are shown

--- a/src/main/webapp/clientHomePage.html
+++ b/src/main/webapp/clientHomePage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="styles/haf.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="styles/tables.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="styles/clientHome.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/estimateDetail.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
