Done client homepage

--- a/src/main/webapp/clientHomePage.html
+++ b/src/main/webapp/clientHomePage.html
@@ -18,7 +18,7 @@
     <header>
         <span>Welcome <span id="usernameWelcome"></span></span>
         <div>
-            <a class="my-button logout-button" href="Logout">Logout</a>
+            <span id="logout-button" class="my-button logout-button">Logout</span>
         </div>
     </header>
     <main>
