Done employee homepage

--- a/src/main/webapp/clientHomePage.html
+++ b/src/main/webapp/clientHomePage.html
@@ -24,8 +24,8 @@
     <main>
         <h1>Client Home Page</h1>
         <section class="error hidden" id="errorScreen">
-            <h2>Error: <span id="errorCode"></span></h2>
-            <span id="errorMessage"></span>
+            <h2><span id="errorMessage"></span></h2>
+            <span>Request Status: <span id="errorCode"></span></span>
         </section>
         <section class="new-estimate-form">
             <form>
