--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,8 +20,8 @@
     <main>
         <h1>Welcome in Estimate Management</h1>
         <section class="error hidden" id="errorScreen">
-            <h2>Error: <span id="errorCode"></span></h2>
-            <span id="errorMessage"></span>
+            <h2><span id="errorMessage"></span></h2>
+            <span>Request Status: <span id="errorCode"></span></span>
         </section>
         <nav>
             <div class="my-button" id="showLogin">Login</div>
