--- a/src/main/webapp/employeeHomePage.html
+++ b/src/main/webapp/employeeHomePage.html
@@ -2,21 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Home Page - EM</title>
-    <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/common.css'"/>
-    <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/haf.css'"/>
-    <link rel="stylesheet" type="text/css" media="all" th:href="${#servletContext.contextPath} + '/styles/tables.css'"/>
+    <title>Employee Home Page</title>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/common.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/haf.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/tables.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/forms.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/clientHome.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="styles/estimateDetail.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
+    <script src="scripts/common.js" charset="UTF-8" defer></script>
+    <script src="scripts/employeeHome.js" charset="UTF-8" defer></script>
 </head>
 <body>
-    <div th:replace="/WEB-INF/templates/header (${session.user})"></div>
-    <main>
-        <h1>Employee Home Page</h1>
-        <div th:replace="~{/WEB-INF/templates/estimateTable (${notPricedEstimates}, ${products}, ${'Not Priced estimates'})}" ></div>
-        <div th:replace="~{/WEB-INF/templates/estimateTable (${pricedEstimates}, ${products}, ${'Priced estimates'})}" ></div>
-    </main>
-    <div th:replace="/WEB-INF/templates/footer"></div>
+<header>
+    <span>Welcome <span id="usernameWelcome"></span></span>
+    <div>
+        <span id="logout-button" class="my-button logout-button">Logout</span>
+    </div>
+</header>
+<main>
+    <h1>Employee Home Page</h1>
+    <section class="error hidden" id="errorScreen">
+        <h2><span id="errorMessage"></span></h2>
+        <span>Request Status: <span id="errorCode"></span></span>
+    </section>
+    <section>
+        <h2>Not Priced Estimates</h2>
+        <dl id="notPricedList">
+            <dt>
+                <div>
+                    <span>000</span>
+                    <span class="headers">Estimate Code</span>
+                </div>
+                <div>
+                    <span>Product</span>
+                    <span class="headers">Product Name</span>
+                </div>
+                <div>
+                    <span>15$</span>
+                    <span>-</span>
+                    <span class="headers">Estimate Price</span>
+                </div>
+                <div>
+                    <a class="my-button">See details</a>
+                </div>
+            </dt>
+            <dt>
+                <span>No estimates found</span>
+            </dt>
+        </dl>
+    </section>
+    <section>
+        <h2>User Estimates</h2>
+        <dl id="userEstimatesList">
+            <dt>
+                <div>
+                    <span>000</span>
+                    <span class="headers">Estimate Code</span>
+                </div>
+                <div>
+                    <span>Product</span>
+                    <span class="headers">Product Name</span>
+                </div>
+                <div>
+                    <span>15$</span>
+                    <span>-</span>
+                    <span class="headers">Estimate Price</span>
+                </div>
+                <div>
+                    <a class="my-button">See details</a>
+                </div>
+            </dt>
+            <dt>
+                <span>No estimates found</span>
+            </dt>
+        </dl>
+    </section>
+</main>
+<footer class="em-footer bar" th:fragment="fragment">
+    <span>Carlo Chiodaroli - Estimate Management - 2022</span>
+</footer>
 </body>
 </html>
