--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,7 +36,7 @@
                 </label>
                 <label title="Password">
                     <span>Password</span>
-                    <input type="password" name="password" required>
+                    <input type="password" name="password"  required>
                 </label>
                 <input class="my-button submit-button" id="loginButton" type="submit" value="Login">
             </form>
@@ -53,15 +53,15 @@
                 </label>
                 <label>
                     <span>Password</span>
-                    <input type="password" name="password" required>
+                    <input type="password" name="password"  required>
                 </label>
                 <label>
                     <span>Repeat Password</span>
-                    <input type="password" name="rep-password" required>
+                    <input type="password" name="rep-password"  required>
                 </label>
                 <label>
                     <span>userType</span>
-                    <select id="usertype">
+                    <select name="usertype">
                         <option value="EMPLOYEE">Employee</option>
                         <option value="CLIENT">Client</option>
                     </select>
